--- a/datasources.yml
+++ b/datasources.yml
@@ -4,7 +4,8 @@ datasources:
     type: prometheus
     access: proxy
     orgId: 1
-    url: http://docker.for.mac.host.internal:9090
+    # url: http://docker.for.mac.host.internal:9090 ### Uncomment For MAC
+    url: localhost:9090 ### Uncomment For Linux
     basicAuth: false
     isDefault: true
     editable: true
