--- a/prometheus.yml
+++ b/prometheus.yml
@@ -3,4 +3,5 @@ global:
 scrape_configs:
   - job_name: "prom-client-express"
     static_configs:
-      - targets: ["docker.for.mac.host.internal:4000"]
+      # - targets: ["docker.for.mac.host.internal:4000"] ### Uncomment For MAC
+      - targets: ["localhost:4000"] ### Uncomment For Linux 
