Update docker-compose to only have one volume mount for all files/folders

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,9 +4,8 @@ services:
         restart: always
         build: .
         volumes: 
-            # Both of these volume mounts are needed to see code changes in Browser
+            # Mounting all files/folders inside /usr/src/app in the container.
             - ./:/usr/src/app
-            - /usr/src/app/node_modules
         ports:
             - '4000:4000'
     prometheus:
